[tool.poetry]
name = "py-grafana-render"
version = "0.1.4"
description = ""
authors = ["YiZixuan <sqkkyzx@qq.com>"]
readme = "README.md"
packages = [
    { include = "py_grafana_render" },
]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.49"
httpx = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
