[project]
name = "py-grafana-render"
version = "0.1.8"
description = ""
readme = "README.md"
authors = [
    { name = "YiZixuan", email = "sqkkyzx@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "playwright>=1.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
