[project]
name = "py-grafana-render"
version = "0.1.10"
description = ""
readme = "README.md"
authors = [
    { name = "YiZixuan", email = "sqkkyzx@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "playwright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
